# advent-of-code

./: .gitignore  README.md  pyproject.toml
2024/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d16.py  d18.py  d19.py  d2.py  d22.py  d25.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  template.py
