[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Caitlin Cannon <caitlin@cannons.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.8.1"
advent-of-code-data = "^2.0.4"
browser-cookie3 = "^0.19.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
